
syntax = "proto3";
import "google/protobuf/empty.proto";
package writer;


message EventTag{
    string Key = 1;
    string Value = 2;
}


message TelemetryEvent {
    int64 ProcessId = 1;
    int64 StartedAt = 2;
    int64 FinishedAt = 3;
    string ServiceName = 4;
    string EventData = 5;
    optional string Success = 6;
    optional string Fail = 7;
    repeated EventTag Tags = 8;
}

service TelemetryWriter {
    rpc Upload(stream TelemetryEvent) returns (google.protobuf.Empty);
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

 }